--- a/TP-INTEGRADOR/index.html
+++ b/TP-INTEGRADOR/index.html
@@ -207,6 +207,7 @@
             </ul>
           </div>
         </nav>
+        <p>hola</p>
     </footer>
     <script src="./bootstrap-4.6.2-dist/js/bootstrap.min.js"></script>
 
